[package]
name = "playmod"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.4", default-features = false, features = ["std", "derive"], optional = true }
cpal = "0.13.2"
eyre = "0.6.5"
once_cell = "1.19.0"

[features]
clap = ["dep:clap"]

[dependencies.modfile]
git = "https://github.com/hypp/modfile"

[[bin]]
name = "playsample"
required-features = ["clap"]
